<resources>
    <string name="app_name">EyesGenetic</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="child">Child</string>
    <string name="no_description">No description</string>
    <string name="probability_chance_50_percent">50 %</string>
    <string name="select_eyes_color">Select Eyes Color</string>
    <string name="brown">Brown</string>
    <string name="blue_grey">Blue / Grey</string>
    <string name="green">Green</string>
</resources>